cluster/mediaserver/gameyfin/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: gameyfin
    app.kubernetes.io/version: 2.4.0
  name: gameyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: gameyfin
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gameyfin
        app.kubernetes.io/version: 2.4.0
    spec:
      automountServiceAccountToken: false
      enableServiceLinks: false
      containers:
      - image: ghcr.io/gameyfin/gameyfin:2.4.0@sha256:857730f1807a92dad1a7bb50e1ba5409e0f27119a2207374045a8f52b4a42cc5
        name: gameyfin
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - mountPath: /opt/gameyfin/db
          subPath: db
          name: state
        - mountPath: /opt/gameyfin/data
          subPath: data
          name: state
        - mountPath: /opt/gameyfin/plugindata
          subPath: plugindata
          name: state
        - mountPath: /opt/gameyfin/logs
          subPath: logs
          name: state
        - mountPath: /games
          name: games
          readOnly: true
        resources:
          requests:
            cpu: 50m
            memory: 512Mi
          limits:
            cpu: "2"
            memory: 1Gi
        securityContext:
          capabilities:
            add:
            - CHOWN
            - DAC_OVERRIDE
            - FOWNER
            - KILL
            - SETUID
            - SETGID
            drop:
            - ALL
          allowPrivilegeEscalation: false
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8081
          periodSeconds: 10
        startupProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8081
          periodSeconds: 10
          failureThreshold: 60
      volumes:
      - name: state
        persistentVolumeClaim:
          claimName: gameyfin-config
      - name: games
        persistentVolumeClaim:
          claimName: gameyfin-games
