cluster/mediaserver/gameyfin/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: gameyfin
    app.kubernetes.io/version: 2.4.0
  name: gameyfin
spec:
  selector:
    app.kubernetes.io/name: gameyfin
  ports:
  - name: http-gameyfin
    port: 8080
    targetPort: 8080
