cluster/mediaserver/gameyfin/default-deny-egress.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: gameyfin-default-deny-egress
spec:
  podSelector: {}
  policyTypes:
  - Egress
