cluster/mediaserver/gameyfin/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: gameyfin-networkpolicy
spec:
  podSelector: {}
  policyTypes:
  - Ingress
